<resources>
    <string name="app_name">tomultiQA</string>
    <string name="QuestTypeTran">[Type:</string>
    <string name="QuestLevelTran">/QuestLevel:</string>
    <string name="QuestValueTran">/Value:</string>
    <string name="PointTran">Point]</string>
    <string name="RightTitleTran">[Right:</string>
    <string name="WrongTitleTran">/Wrong:</string>
    <string name="ReloadTitleTran">/Reload:</string>
    <string name="TakeNoteTran">TakeNote</string>
    <string name="SquareTran">Square</string>
    <string name="WriteinTran">Favorite</string>
    <string name="ReloadTran">Reload</string>
    <string name="ConfirmTran">Confirm></string>
    <string name="QuestTypeValue_Quest">Quest</string>
    <string name="ReloadTripsTran">Press \"Confirm\"(check icon) to load Quest.</string>
    <string name="TypeAnswerTripsTran">Type your answer for Quest here.</string>
    <string name="WrongHintTran">Your answer is Wrong.</string>
    <string name="QuestShowTitleTran">Quest</string>
    <string name="AnswerShowTitleTran">Answer</string>
    <string name="SettingTitleTran">Setting</string>
    <string name="SetQuestTitleTran">Quest</string>
    <string name="SetQuestAnswerTitleTran">Answer</string>
    <string name="StoreCustomQuestTitleTran">StoreQuest</string>
    <string name="QuestCountingTitleTran">Number:</string>
    <string name="TypeQuestTitleHintTran">Type Quest here.</string>
    <string name="TypeQuestAnswerHintTran">Type Answer of Quest here.</string>
    <string name="QuestQuestionTypeTran">Question</string>
    <string name="NoQuestAvailableHintTran">No Quests available, please go to Setting to Add some new Quest.</string>
    <string name="BossMode1WordTran">Mode I</string>
    <string name="BossMode2WordTran">Mode II</string>
    <string name="BossMode3WordTran">Mode III</string>
    <string name="NoBossAbilityWordTran">No Ability</string>
    <string name="ATKWordTran">Attack</string>
    <string name="CritialRateWordTran">Critical Rate</string>
    <string name="CritialDamageWordTran">Critical DMG</string>
    <string name="BattleWinTran">You Win!</string>
    <string name="BattleLostTran">You Lost…</string>
    <string name="PointTitleTran">/Point:</string>
    <string name="MaterialTitleTran">/Material:</string>
    <string name="ShopTitleTran">Shop</string>
    <string name="ShopEventTitleTran">Event</string>
    <string name="ShopHelpTitleTran">Help</string>
    <string name="QuestComboTitleTran">[Combo:</string>
    <string name="BuyButtonTitleTran">Buy</string>
    <string name="TalentTitleTran">Talent</string>
    <string name="ConflictTitleTran">Conflict</string>
    <string name="ExchangeTitleTran">Exchange</string>
    <string name="DialogConfirmButtonTran">Confirm</string>
    <string name="RewardWordTran">Reward</string>
    <string name="EXPRewardWordTran">(EXP)</string>
    <string name="PointsRewardWordTran">(Points)</string>
    <string name="MaterialRewardWordTran">(Material)</string>
    <string name="CancelWordTran">Cancel</string>
    <string name="ConfirmWordTran">Confirm</string>
    <string name="DailyButtonTran">Daily</string>
    <string name="MissionButtonTran">Mission(Closed)</string>
    <string name="UPfloorTran">UP</string>
    <string name="DownfloorTran">Down</string>
    <string name="FloorWordTran">Floor</string>
    <string name="BossDetailWordTran">Detail</string>
    <string name="BossInformationWordTran">Boss Information</string>
    <string name="BossNameWordTran">Boss Name</string>
    <string name="RecommendLevelWordTran">Recommend Level</string>
    <string name="BossLevelWordTran">Boss Level</string>
    <string name="BossHPWordTran">Boss HP</string>
    <string name="BattleTurnWordTran">Battle Turn</string>
    <string name="BossAbilityWordTran">Boss Ability</string>
    <string name="RewardButtonTran">Reward</string>
    <string name="FieldEffectWordTran">Effect</string>
    <string name="StartButtonTran">Start!</string>
    <string name="TalentWordTran">Talent</string>
    <string name="LevelWordTran">Level</string>
    <string name="PointsPerLevelWordTran">Points(/Level)</string>
    <string name="EffectWordTran">Effect</string>
    <string name="UpgardeButtonTran">Upgrade</string>
    <string name="QuestLevelWordTran">Level</string>
    <string name="AppModeWordTran">AppMode</string>
    <string name="AboutQuestTitleTran">About Quest</string>
    <string name="MemoryWordTran">Memory</string>
    <string name="FolderWordTran">Folder</string>
    <string name="QuestEditorWordTran">Editor</string>
    <string name="EnableWordTran">Enable</string>
    <string name="ShowFortuneWordTran">Show Fortune of Today (By Random)</string>
    <string name="AutoCloseTimerWordTran">Close Timer after Checking</string>
    <string name="TargetDayWordTran">Target Day</string>
    <string name="TimerUnitWordTran">Timer Unit</string>
    <string name="SaveWordTran">Save</string>
    <string name="AutoClearWordTram">AutoClear</string>
    <string name="DailyWordTran">Daily</string>
    <string name="PointWordTran">Point</string>
    <string name="MaterialWordTran">Material</string>
    <string name="EXPWordTran">EXP</string>
    <string name="RewardTypeWordTran">Reward Type</string>
    <string name="DiffcultyWordTran">Difficulty</string>
    <string name="RecordWordTran">Record</string>
    <string name="AccumulativeWordTran">Accumulative</string>
    <string name="StoryWordTran">Story</string>
    <string name="AchievementWordTran">Achievement</string>
    <string name="HandBookWordTran">HandBook</string>
    <string name="PlayerDataWordTran">Player</string>
    <string name="StoryLoadHintTran">Click [Before] or [Next] Button to load Story.</string>
    <string name="MainStoryWordTran">Main.</string>
    <string name="DeveloperStoryWordTran">Dev.</string>
    <string name="ProgressLoadWordTran">Initializing Story by reading progress.</string>
    <string name="BeforePageButtonTran">Before</string>
    <string name="NextPageButtonTran">Next</string>
    <string name="ReturnToWordTran">Quit</string>
    <string name="AbilityHelpTextTran">Ability II ( which name like \"xxx II\" ) is higher state for Ability, they can provide extra effect to Boss. They need to rely on Ability I to be effective. And two level of Ability`s effect can be added Normally.</string>
    <string name="AbilityHelpButtonTran">--Click here to know more detail about Ability!</string>
    <string name="NextAbilityButtonTran">Next</string>
    <string name="BeforeAbilityButtonTran">Before</string>
    <string name="MaximumWordTran">Highest</string>
    <string name="NoticeWordTran">Notice</string>
    <string name="AutoKeyboardSwitchTran">Pop up Keyboard automatically</string>
    <string name="DamageDialogSwitchTran">Damage Number Display</string>
    <string name="AlchemyButtonTran">Alchemy</string>
    <string name="ATKElementNameTran">SpearHead</string>
    <string name="CRElementNameTran">Sharpness</string>
    <string name="CDElementNameTran">Violent</string>
    <string name="ATKElementEffectTran">Increase ATK by 10% in each Element.</string>
    <string name="CDElementEffectTran">Increase Critical Rate by 5% in each Element.</string>
    <string name="CRElementEffectTran">Increase Critical DMG by 15% in each Element.</string>
    <string name="ElementWordTran">Element</string>
    <string name="MasteryWordTran">Mastery</string>
    <string name="AddTurn1NameTran">Balance I</string>
    <string name="AddTurn1EffectTran">Increase Sustain Turn by additional 5 Turns.</string>
    <string name="AddSuccessRateNameTran">Reconlie</string>
    <string name="AddSuccessRateEffectTran">Increase Success Rate by 5% in each Element.</string>
    <string name="MaterialCostWordTran">Material Cost</string>
    <string name="SustainTurnWordTran">Sustain Turn</string>
    <string name="SuccessRateWordTran">Success Rate</string>
    <string name="CreateAlchemyButtonTran">Create!</string>
    <string name="AddToRecipeButtonTran">Add it to Recipe</string>
    <string name="ClearRecipeButtonTran">Clear All</string>
    <string name="RecipeWordTran">Recipe</string>
    <string name="TourneyWordTran">Tourney</string>
    <string name="TrialAbilityTran">Trial</string>
    <string name="RushAbilityTran">Rush</string>
    <string name="FragileAbilityTran">Fragile</string>
    <string name="WeakSpotAbilityTran">WeakSpot</string>
    <string name="SlowAbilityTran">Slow</string>
    <string name="CorrosionAbilityTran">Corrosion</string>
    <string name="CurseAbilityTran">Curse</string>
    <string name="DiversionAbilityTran">Diversion</string>
    <string name="TreasureAbilityTran">Treasure</string>
    <string name="RecoverAbilityTran">Recover</string>
    <string name="LastHurtAbilityTran">LastHurt</string>
    <string name="ShieldAbilityTran">Shield</string>
    <string name="HopelessAbilityTran">Hopeless</string>
    <string name="FastStepAbilityTran">FastStep</string>
    <string name="ProudAbilityTran">Proud</string>
    <string name="FearAbilityTran">Fear</string>
    <string name="ReTimeAbilityTran">ReTime</string>
    <string name="ErrorWordTran">Error</string>
    <string name="PastNameTran">Past</string>
    <string name="EvaluationRecordTran">Evaluation Record</string>
    <string name="EditWordTran">Edit</string>
    <string name="EvaluationValueTran">Evaluation Value</string>
    <string name="TakeNoteHintTran">Press\"TakeNote\"(file icon) to Save Text.</string>
    <string name="JumpConflictButtonTran">Jump</string>
    <string name="TourneyPtWordTran">Tourney Pt</string>
    <string name="AboutAppWordTran">About the App</string>
    <string name="HintWordTran">Hint</string>
    <string name="HardAchievementDetailWordTran">Hard Achievement Detail</string>
    <string name="ReloadAchievementTran">Reload</string>
    <string name="UnlockHardAchievementWordTran">Finished Hard Achievement to unlock their Detail.</string>
    <string name="InputFormulaWordTran">Formula Text</string>
    <string name="InputFormulaNumberWordTran">Number of Formula</string>
    <string name="HelpWordTran">Help</string>
    <string name="GameFormulaWordTran">Game Formula</string>
    <string name="AdditionalFunctionTran">Additional Function</string>
    <string name="NormalClassWordTran">--Normal Class--</string>
    <string name="HardClassWordTran">--Hard Class--</string>
    <string name="RedIsCompletedTran">Red is Completed</string>
    <string name="YouHadOneAvailableTran">You had one available!</string>
    <string name="CostAllPointsWordTran">Sustained Upgrade</string>
    <string name="BackpackWordTran">Backpack</string>
    <string name="LootBoxTran">Box:</string>
    <string name="LootKeyTran">/LootKey:</string>
    <string name="MarketPriceTran">Market Price</string>
    <string name="ItemListTran">Item in Box</string>
    <string name="BoxOperationTran">Item Operation</string>
    <string name="ItemTypeTran">Type</string>
    <string name="SellWordTran">Sell</string>
    <string name="BuyWordTran">Buy</string>
    <string name="MarketDetailTran">Detail</string>
    <string name="OpenLootBoxTran">Open</string>
    <string name="MarketBoxWordTran">Box</string>
    <string name="MarketKeyWordTran">Key</string>
    <string name="PointPerBoxTran">Point / Box</string>
    <string name="PointPerKeyTran">Point / Key</string>
    <string name="FavoriteCheckTran">Check</string>
    <string name="RemoveFavoriteTran">Remove Favorite</string>
    <string name="RandomWordTran">Random</string>
    <string name="QueueWordTran">Queue</string>
    <string name="FavoriteReloadModeTran">Reload Mode</string>
    <string name="ReloadFavoriteHintTran">Press \"Reload\" button to load Favorite Quest.</string>
    <string name="ShowAnswerTran">Show Answer</string>
    <string name="ResetQueueTran">Reset Queue</string>
    <string name="NextQuestTran">Next Quest</string>
    <string name="LastQuestTran">Last Quest</string>
    <string name="FavoriteCostTimeTran">Time</string>
</resources>