<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarketActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ResourceShowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/LootBoxTran"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/LootKeyTran"
            app:layout_constraintEnd_toStartOf="@+id/KeyCountInMarket"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/BoxCountingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="0"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/PointTitleTran"
            app:layout_constraintStart_toEndOf="@+id/BoxCountingView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PointCountInMarket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="0"
            app:layout_constraintEnd_toStartOf="@+id/textView29"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/KeyCountInMarket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/MarketPriceTran"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResourceShowLayout" />

    <TextView
        android:id="@+id/BoxMarketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/PointPerBoxTran"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/KeyMarketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/PointPerKeyTran"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxMarketPrice" />

    <Button
        android:id="@+id/OpenLootBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="OpenMarketItem"
        android:text="@string/OpenLootBoxTran"
        app:layout_constraintBottom_toTopOf="@+id/BuyMarketItem"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/SellMarketItem"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="SellMarketItem"
        android:text="@string/SellWordTran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/BackpackEntry"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="GoToBackpack"
        android:text="@string/BackpackWordTran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button34" />

    <Button
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ShopHelpTitleTran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SellMarketItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BuyMarketItem"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="BuyMarketItem"
        android:text="@string/BuyWordTran"
        app:layout_constraintBottom_toTopOf="@+id/SellMarketItem"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/ItemTypeChoose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="@+id/button32"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/BoxTypeChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="ChangeItemType"
            android:text="@string/MarketBoxWordTran"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/KeyTypeChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ChangeItemType"
            android:text="@string/MarketKeyWordTran"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ItemListTran"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResourceShowLayout" />

    <ScrollView
        android:id="@+id/BoxRewardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/OpenLootBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/BackpackEntry"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/BoxRewardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/button34"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="ShowOpeningDetail"
        android:text="@string/MarketDetailTran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KeyMarketPrice" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/BoxOperationTran"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/OpenLootBox" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ItemTypeTran"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ItemTypeChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

</androidx.constraintlayout.widget.ConstraintLayout>