<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FavoriteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuestShowTitleTran"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FavoriteProcessView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:text="- / -"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/FavoriteTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/ReloadFavoriteHintTran"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/AnswerShowTitleTran"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FavoriteTitleView" />

    <EditText
        android:id="@+id/FavoriteAnswerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/TypeAnswerTripsTran"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <Switch
        android:id="@+id/FavoriteAnswerShowSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="ShowAnswerSwitch"
        android:text="@string/ShowAnswerTran"
        app:layout_constraintBottom_toBottomOf="@+id/textView65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView65"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="ShowFavoriteSetting"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        android:contentDescription="@string/SettingTitleTran"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView75">

        <Button
            android:id="@+id/LastFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="LastQuestButton"
            android:text="@string/LastQuestTran"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/RemoveFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="DeleteFavorite"
            android:text="@string/RemoveFavoriteTran" />

        <Button
            android:id="@+id/NextFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="NextQuestButton"
            android:text="@string/NextQuestTran"
            android:textAllCaps="false" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/FavoriteSettingCard"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/AdditionalFunctionTran"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/FavoriteJudgeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="AutoJudgeSwitch"
                android:text="@string/FavoriteCheckTran" />

            <RadioGroup
                android:id="@+id/ReloadModeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView71"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/FavoriteReloadModeTran"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/RandomReloadChoose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="ChangeLoadFavoriteMode"
                    android:text="@string/RandomWordTran" />

                <RadioButton
                    android:id="@+id/QueueReloadChoose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ChangeLoadFavoriteMode"
                    android:text="@string/QueueWordTran" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ResetFavoriteQueue"
                    android:text="@string/ResetQueueTran"
                    android:textAllCaps="false" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/FavoriteCorrectShowView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView65"
        app:layout_constraintEnd_toStartOf="@+id/FavoriteAnswerShowSwitch"
        app:layout_constraintStart_toEndOf="@+id/textView65"
        app:layout_constraintTop_toTopOf="@+id/textView65" />

    <Chronometer
        android:id="@+id/FavoriteTimerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="00:00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView75" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/FavoriteCostTimeTran"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FavoriteAnswerView" />

</androidx.constraintlayout.widget.ConstraintLayout>